[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hcl_pdra25"
version = "1.0.4"
dependencies = [
    "speasy>=1.5.2",
    "cdflib>=1.3.4",
    "cycler>=0.12.1",
    "spiceypy>=6.0.3",
    "matplotlib>=3.10.1",
    "sunpy[all]>=7.0.0"
]
requires-python = ">=3.13.2"
authors = [
  {name = "Harry C Lewis", email = "h.lewis21@imperial.ac.uk"},
]
readme = "README.md"